[package]
name = "cdr_toolkit"
version = "0.2.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
homepage = "https://github.com/jcasben/cdr_toolkit"
description = "Toolkit for simple calculations related to Data Comunication and Networks. Made for the course Comunicació de Xarxes i Dades, from UIB."
repository = "https://github.com/jcasben/cdr_toolkit"
keywords = [
    "cli",
    "data-comunication",
    "networks"
]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"